# HydraDragonAntivirus

./: .gitignore  OpenHydraDragon.py  OpenHydraDragonAntiRootkit.py  README.md  README.txt  READMEflake8.md  READMEpylingual.md  SECURITY.md  antivirus.py  antiviruslite.py  compilier.iss  cxfreezerequirements.txt  debug.py  flake8command.txt  flake8results.txt  flake8results.txxt  ghidradebugcommand.bat  installer.iss  nuitka.txt  nutikarequirements.txt  peterminator.py  post_install.bat  pyinstaller.txt  pyinstallerrequirements.txt  pyproject.toml  requirements.txt  run.bat  scanonline.py  setup.bat  setup.py  winmonitor.py
.github/: dependabot.yml
DONTREMOVEHydraDragonFileTrap/: DONTREMOVEHydraDragonFileTrap.sln
GoStringUngarbler/: gostringungarbler_lib.py
HydraDragonAVSandboxieLoader/: HydraDragonAVSandboxieLoader.sln
HydraDragonAntivirusGUI/: HydraDragonAntivirusGUI.sln
HydraDragonAntivirusLauncher/: HydraDragonAntivirusLauncher.sln
HydraDragonAntivirusService/: HydraDragonAntivirusService.sln
HydraDragonAntivirusTaskScheduler/: HydraDragonAntivirusTaskScheduler.sln
HydraDragonFirewall/: .gitignore  README.md  copy_driver.ps1
HydraDragonFirewall/hydradragonfirewall/: Cargo.toml  SDK_FEATURES.md  app.manifest  app.rc  build.ps1  build.rs  create_icon.py  package-lock.json  rules.yaml  settings.json  tauri.conf.json  ui_check_v4.txt
HydraDragonFirewall/hydradragonfirewall/.cargo/: config.toml
HydraDragonFirewall/hydradragonfirewall/capabilities/: app-default.json
HydraDragonFirewall/hydradragonfirewall/hook_dll/: Cargo.toml
HydraDragonFirewall/hydradragonfirewall/hook_dll/src/: lib.rs
HydraDragonFirewall/hydradragonfirewall/src/: engine.rs  file_magic.rs  http_parser.rs  injector.rs  lib.rs  main.rs  sdk.rs  tls_parser.rs  web_filter.rs  web_filter_test_content.txt  windivert_api.rs
HydraDragonFirewall/hydradragonfirewall/ui/: Cargo.toml  check_log.txt  check_output.txt  check_output_utf8.txt  index.html  style.css
HydraDragonFirewall/hydradragonfirewall/ui/src/: main.rs  wiki.rs
HydraDragonFirewall/hydradragonfirewalldrv/: Cargo.toml  build.rs
HydraDragonFirewall/hydradragonfirewalldrv/.cargo/: config.toml
HydraDragonFirewall/hydradragonfirewalldrv/src/: lib.rs
MBRFilter/: README.txt
MegaDumper/: .gitignore  MegaDumper.sln  README.md
OpenHydra/: OpenHydra.sln
OpenHydraDragonRules/: OpenHydraDragon.py  convertsigmaohd.py  rules.ohd  sigma.ohd
OpenHydraEngine/: engine.py  enginescanner.py  signatures.json
Owlyshield/: README.md
Owlyshield/owlyshield_predict/: Cargo.toml  behavior_rules.yaml
Owlyshield/owlyshield_predict/examples/: sdk_usage.rs
Owlyshield/owlyshield_predict/rules/: sandboxes.yaml
Owlyshield/owlyshield_predict/slc-paths/: Cargo.toml
Owlyshield/owlyshield_predict/src/: actions_on_kill.rs  app_settings.rs  behavior_engine.rs  behaviour_engine.rs  config.rs  csvwriter.rs  extensions.rs  lib.rs  logging.rs  main.rs  novelty.rs  process.rs  services.rs  shared_def.rs  threat_handler.rs  utils.rs  whitelist.rs  worker.rs
Owlyshield/owlyshield_predict/src/behavioral/: app_settings.rs  behavior_engine.rs  mod.rs
Owlyshield/owlyshield_predict/src/connectors/: community.rs  connector.rs  register.rs  sitincloud.rs
Owlyshield/owlyshield_predict/src/linux/: driver_com.rs  mod.rs  run.rs  threathandling.rs
Owlyshield/owlyshield_predict/src/realtime_learning/: api_tracker.rs  autonomous_learning.rs  behavioral_signature.rs  malware_patterns.rs  ml_collector.rs  mod.rs  realtime_learning.rs
Owlyshield/owlyshield_predict/src/windows/: av_integration.rs  behavior_engine.rs  driver_com.rs  mod.rs  notifications.rs  run.rs  signature_verification.rs  threathandling.rs
Owlyshield/owlyshield_predict/vfs-kprobes/ebpf-monitor-ebpf/src/: bindings.rs
PYAS_Protection/: README.md
Sanctum/: Cargo.toml  MALWARE.ps1  Makefile.toml  installer_clean_vm.ps1  readme.md  sign_etw_consumer.bat  sign_ppl_runner.bat
Sanctum/driver/: Cargo.toml  Sanctum.inx  build.rs  cert.ps1  makefile.toml  rust-toolchain.toml  sanctum.pfx  sign.bat
Sanctum/driver/.cargo/: config.toml
Sanctum/driver/src/: alt_syscalls.rs  device_comms.rs  ffi.rs  lib.rs  utils.rs
Sanctum/driver/src/core/: etw_mon.rs  filesystem.rs  injection.rs  mod.rs  process_callbacks.rs  process_monitor.rs  registry.rs  syscall_processing.rs  threads.rs  veh_monitor.rs
Sanctum/driver/src/response/: containment.rs  mod.rs  reporting.rs
Sanctum/elam_installer/: Cargo.toml  readme.md
Sanctum/elam_installer/src/: main.rs
Sanctum/gui/src-tauri/: Cargo.toml  tauri.conf.json
Sanctum/gui/src-tauri/capabilities/: default.json
Sanctum/gui/src-tauri/icons/: icon.icns
Sanctum/gui/src-tauri/src/: antivirus.rs  driver_controller.rs  ipc.rs  main.rs  processes.rs  settings.rs
Sanctum/injected_dll/: Cargo.toml
Sanctum/injected_dll/src/: integrity.rs  ipc.rs  lib.rs  stubs.rs  threads.rs
Sanctum/sanctum_ppl_runner/: Cargo.toml  build.rs  readme.md
Sanctum/sanctum_ppl_runner/src/: ipc.rs  logging.rs  main.rs  registry.rs  tracing.rs
Sanctum/shared_no_std/: Cargo.toml
Sanctum/shared_no_std/src/: constants.rs  driver_ipc.rs  ghost_hunting.rs  gui_traits.rs  ioctl.rs  ipc.rs  lib.rs
Sanctum/shared_std/: Cargo.toml
Sanctum/shared_std/src/: constants.rs  driver_manager.rs  file_scanner.rs  lib.rs  processes.rs  security.rs  settings.rs
Sanctum/um_engine/: Cargo.toml
Sanctum/um_engine/src/: engine.rs  filescanner.rs  main.rs  settings.rs  strings.rs
Sanctum/um_engine/src/core/: core.rs  ipc_etw_consumer.rs  ipc_injected_dll.rs  mod.rs  process_monitor.rs
Sanctum/um_engine/src/driver_manager/: driver_manager.rs  ioctl.rs  mod.rs  service.rs
Sanctum/um_engine/src/gui_communication/: ipc.rs
Sanctum/um_engine/src/utils/: env.rs  log.rs  mod.rs
SandboxieSettings/: Sandboxie.ini  TODO.md
SbieHide/: README.txt
assets/: Hydra.psd  convert.ico.py
checkextensions/: checkextensions.py
clamavconfig/: clamd.conf
codechecker/: emptycheck.py  functionordercheck.py  syntaxcheck.py  w291emptycheck.py
config/: user_preference.json
database/: jurlbla.ndb  (+11 more)
(+1896 files in other folders)
