[tool.poetry]
requires-poetry = ">=2.0"

[project]
name = "hydradragon"
version = "0.1.0"
description = "HydraDragonAntivirus: Advanced Open Source Antivirus and Python Bytecode Reverse Engineering Tool"
authors = [
    { name = "Emirhan Ucan", email = "130374789+Siradankullanici@users.noreply.github.com" },
]
license = { text = "AGPL-3.0-only" }
readme = "README.md"
requires-python = "==3.12.*"
keywords = ["antivirus", "reverse engineering", "bytecode", "python", "decompiler", "hydradragon"]

dependencies = [
    # Antivirus dependencies
    "yara-python==4.5.4",
    "yara-x==1.4.0",
    "joblib>=1.5.1,<2.0.0",
    "pefile>=2024.8.26,<2025.0.0",
    "psutil>=7.0.0,<8.0.0",
    "watchdog>=6.0.0,<7.0.0",
    "notify-py>=0.3.43,<0.4.0",
    "pywin32>=310,<311",
    "base32-crockford>=0.3.0,<0.4.0",
    "accelerate>=1.8.1,<2.0.0",
    "py7zr>=1.0.0,<2.0.0",
    "chardet>=5.2.0,<6.0.0",
    "pyelftools>=0.32,<0.33",
    "zstandard>=0.23.0,<0.24.0",
    "macholib>=1.16.3,<2.0.0",
    "debloat>=1.6.4,<2.0.0",
    "cryptography>=45.0.4,<46.0.0",
    "capstone>=5.0.6,<6.0.0",
    "pyside6>=6.9.1,<7.0.0",
    "pyzipper>=0.3.6,<0.4.0",
    "wmi>=1.5.1,<2.0.0",
    "evbunpack>=0.2.4,<0.3.0",
    "unicorn>=2.1.3,<3.0.0",
    "lief>=0.16.6,<0.17.0",
    "scapy>=2.6.1,<3.0.0",
    "spacy>=3.8.7,<4.0.0",
    "pycryptodome==3.23.0",
    "autoit-ripper",
    "comtypes",
    "androguard",
    "nltk",

    # Pylingual reverse-engineering dependencies
    "asttokens",
    "datasets",
    "huggingface-hub",
    "matplotlib",
    "networkx",
    "numpy",
    "pydot",
    "requests",
    "tokenizers",
    "torch",
    "tqdm",
    "rich",
    "seqeval",
    "transformers==4.46.1",
    "transformers[torch]",
    "xdis>=6.1.4",
    "click"
]

[project.scripts]
hydradragon = "hydradragon.antivirus:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# linter and formatter
[tool.ruff]
# Exclude commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py312"
line-length = 240
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"
