[tool.poetry]
requires-poetry = ">=2.0.0"

[project]
name = "hydradragon"
version = "0.1.0"
description = "HydraDragonAntivirus: Advanced Open Source Antivirus and Python Bytecode Reverse Engineering Tool"
authors = [
    { name = "Emirhan Ucan", email = "130374789+Siradankullanici@users.noreply.github.com" },
]
license = { text = "AGPL-3.0-only" }
readme = "README.md"
requires-python = "==3.12.*"
keywords = ["antivirus", "reverse engineering", "bytecode", "python", "decompiler", "hydradragon"]

dependencies = [
    # Antivirus dependencies
    "yara-python",
    "yara-x",
    "joblib",
    "pefile",
    "psutil",
    "pywin32",
    "py7zr",
    "chardet",
    "pyelftools",
    "zstandard",
    "macholib",
    "debloat",
    "cryptography",
    "capstone",
    "pyzipper",
    "wmi",
    "evbunpack",
    "unicorn",
    "lief",
    "scapy",
    "pycryptodome",
    "parse",
    "msgpack_python",
    "TgCrypto_pyrofork",
    "logly==0.1.6",
    "autoit-ripper",
    "comtypes",
    "androguard",
    "oletools",
    "aiofiles",
    "unipacker",
   
    # Pylingual reverse-engineering dependencies
    "asttokens",
    "datasets",
    "huggingface-hub",
    "matplotlib",
    "networkx",
    "numpy",
    "pydot",
    "requests",
    "tokenizers",
    "torch",
    "tqdm",
    "rich",
    "seqeval",
    "transformers==4.46.1",
    "transformers[torch]",
    "xdis>=6.1.4",
    "click"
]

[project.scripts]
hydradragon = "hydradragon.engine:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# linter and formatter
[tool.ruff]
# Exclude commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py312"
line-length = 240
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"
