[package]
name = "hydradragonfirewall"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.0.0-rc-13", features = [] }
embed-resource = "3.0.6"

[dependencies]
tauri = { version = "2.0.0-rc-13", features = ["tray-icon"] }
windivert = { path = "../windivert-rust-master/windivert", features = ["vendored"] }

csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"
glob = "0.3"
crossbeam-channel = "0.5"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
