[package]
name = "hydradragonfirewalldrv"
version = "0.1.0"
edition = "2021"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
wdk-build = "*"

[dependencies]
wdk = "*"
wdk-sys = "*"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
