[package]
name = "owlyshield_ransom"
version = "1.1.1"
edition = "2021"
license-file = "LICENSE.txt"

[lib]
name = "owlyshield_ransom"
path = "src/lib.rs"

[dependencies]
moonfire-tflite = { path = "moonfire-tflite" }
slc-paths = { path = "slc-paths" }
win-pe-inspection = { path = "win-pe-inspection" }
wchar = "0.11.0"
registry = "1.2.0"
strum = "0.24.1"
strum_macros = "0.24.2"
byteorder = "1.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_yaml = "0.9.17"
log = "0.4.17"
rmp-serde = "1.1.0"
hostname = "0.3.1"
curl = "0.4.43"
jsonrpc-http-server = "18.0.0"
configparser = "3.0.2"
rumqtt = "0.31.0"
lru = "^0.11"
sysinfo = "0.28"
md-5 = "0.10.6"
regex = "1.12.2"
winreg = "0.55.0"

#Windows
[target.'cfg(target_os = "windows")'.dependencies]
winlog = { version = "0.2.6", features=["env_logger"] }
windows-service = "0.6"
widestring = "1.0.2"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_RemoteDesktop",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Services",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Win32_System_Memory"
]

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
tokio = { version = "1.27", features = ["macros", "rt", "rt-multi-thread", "signal", "time", "io-util", "net", "sync"] }
tracing-subscriber = "0.3"
tracing = "0.1"
futures = "0.3"
psutil = "3.2"
bytemuck = "1.13"
libc = "0.2"
aya = { git = "https://github.com/aya-rs/aya", features = ["async_tokio"] }
aya-log = { git = "https://github.com/aya-rs/aya" }
ebpf-monitor-common = { path = "./vfs-kprobes/ebpf-monitor-common", features = ["user"] }
bytes = "1.1"
anyhow = "1"

[features]
default = []
service = []
malware = []
record = []
replay = []
jsonrpc = []
mqtt = []
novelty = []
hydradragon = []
realtime_learning = []  # Enable OwlyShield realtime-learning for behavioral analysis and ML data collection
