[package]
name = "sanctum"
version = "0.0.2"
edition = "2024"
build = "build.rs"

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]
crate-type = ["cdylib"]
test = false

[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]

[dependencies]
wdk = "0.4"
wdk-alloc = "0.4"
wdk-sys = "0.5"
wdk-panic = "0.4"
# For local testing of my wdk open-source contributions
# wdk = { path="../../windows-drivers-rs/crates/wdk", version = "0.3"}
# wdk-alloc = { path="../../windows-drivers-rs/crates/wdk-alloc", version = "0.3"}
# wdk-sys = { path="../../windows-drivers-rs/crates/wdk-sys", version = "0.3", features = ["filesystem"]}
# wdk-panic = { path="../../windows-drivers-rs/crates/wdk-panic", version = "0.3"}

# wdk_unwrap = {path = "../../wdk_unwrap", version = "0.1.0" }
shared_no_std = { path = "../shared_no_std", default-features = false }
serde_json = {version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"]}
# wdk-mutex = "1.1.0"
strum = { version = "0.27", default-features = false, features = ["derive"] }
anyhow = { version = "1.0", default-features = false }
wdk-mutex = {version = "1.3.0", path = "../../wdk_mutex"}

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true

[build-dependencies]
wdk-build = "0.5"
# For local testing of my wdk open-source contributions
# wdk-build = { path="../../windows-drivers-rs/crates/wdk-build", version = "0.3"}