[package]
name = "shared_std"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
shared_no_std = { path = "../shared_no_std" }
windows = {version = "0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_System_SystemServices",
]}