[package]
name = "um_engine"
version = "0.0.3"
edition = "2024"

[dependencies]
windows = {version = "0", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
]}
shared_no_std = { path = "../shared_no_std" }
shared_std = { path = "../shared_std" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = {version="1", features = ["full"] }
md-5 = "0.10"
reqwest = {version = "0.12", features = []}
anyhow = "1.0.100"
